@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.sratim.co.il"
        name="Sratim"
-       version="1.3.1"
+       version="1.3.2"
        provider-name="Lev Waisberg">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
