@@ -4,6 +4,6 @@
 	<setting label="30001" type="labelenum" values="YouTube|None" id="trailersFrom" default="YouTube" />
 	<setting label="30002" type="labelenum" values="MovieDB|None" id="fanart" default="MovieDB" />
 	<setting label="30003" type="labelenum" values="Sratim|TMDB|MoviePosterDB" id="thumbFrom" default="Sratim" />
-	<setting label="30004" type="labelenum" values="IMDB|Sratim" id="ratingFrom" default="Sratim"/>
+	<setting label="30004" type="labelenum" values="IMDB|Sratim" id="ratingFrom" default="IMDB"/>
 	<setting label="30005" type="labelenum" values="Hebrew|English" id="titleLang" default="Hebrew"/>
 </settings>
