@@ -1,3 +1,9 @@
+[B]1.3.2[/B]
+- add year to search query (if exist in name)
+- make results sorted (match is much better)
+- make IMDB the default "ratingFrom" 
+- BIG THANKS to MeatHook for making the changes!
+
 [B]1.3.1[/B]
 - revert changes to querying due to issues
 
